--- a/less/collapsible-select-control.less
+++ b/less/collapsible-select-control.less
@@ -67,5 +67,5 @@
 li.active,
 .panel-body li:hover {
 	color: @gray-lighter;
-	background-color: @gray;
+	//background-color: @gray;
 }
