--- a/less/core.less
+++ b/less/core.less
@@ -38,7 +38,7 @@ optgroup
 }
 
 /* tables still need 'cellspacing="0"' in the markup */
-table 
+table
 {
     border-collapse: collapse;
     border-spacing: 0;
@@ -75,25 +75,113 @@ table
 }
 
 #user-pulldown {
-	margin: 5px;
+	margin: 0 0px;
 }
 
-#user-pulldown li a {
-	padding-top: 2px;
+#top-header {
+}
+
+.top-header-col {
+	float: left;
+}
+
+#top-header-center {
+	width: 1px;
+	overflow: hidden;
+	height: 28px;
+	float: left;
+}
+
+#top-header-logo.collapsed {
+	width: 37px;
+}
+
+#top-header-logo span {
+	line-height: 19px;
+}
+
+#top-header-logo.collapsed span {
+	position: relative;
+	top: 3px;
+}
+
+#top-header-logo.collapsed .logo-text {
+	display: none;
+}
+
+#top-header-right {
+	float: right;
+}
+
+#graph-title {
+	color: #666;
+	height: 28px;
+	text-align: center;
+	padding: 7px 10px 0px 7px;
+	overflow: hidden;
+	white-space: nowrap;
+	display: none;
+	border-right: 10px solid #222;
+}
+
+.dropdown-menu {
+	padding: 0 !important;
+	border-radius: 0 !important;
+	margin: 0 !important;
+	border-top: 1px solid #222 !important;
+	border-left: 1px solid #222 !important;
+	border-right: 1px solid #222 !important;
+	border-bottom: none !important;
+}
+
+.dropdown-menu > li > a {
+	padding: 10px !important;
+	cursor: pointer;
+	border-bottom: 1px solid #222 !important;
+}
+
+#user-pulldown > li > a {
+	height: 28px;
+	padding-top: 7px;
 	padding-bottom: 0px;
-	padding-left: 5px;
-	padding-right: 5px;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+.nav > li > a:hover, .nav > li > a:focus {
+	background: #1a1a1a;
 }
 
 #load-spinner {
-	display: flex;
-	max-width: 26px;
-	min-width: 26px;
-	height: 26px;
+	position: absolute;
+	left: 10px;
+	top: 3px;
+	opacity: 0.65;
+	max-width: 18px;
+	min-width: 18px;
+	height: 19px;
 	background: url('/images/load-spinner.gif');
+	background-size: 100% 100%;
+	-moz-background-size: 100% 100%;
+	-webkit-background-size: 100% 100%;
 	margin-top: 2px;
 }
 
+#play, #stop, #fullscreen {
+	height: 28px;
+	padding-top: 7px;
+}
+
+.header .btn {
+	height: 28px;
+	display: block;
+	float: left;
+	margin-right: 2px;
+}
+
+.header .btn.save-button {
+	margin-right: 0;
+}
 
 #canvases {
 	flex: 1;
@@ -272,7 +360,7 @@ table
 	padding-left: 2px;
 	padding-right: 8px;
 	border: none !important;
-	vertical-align: top; 
+	vertical-align: top;
 }
 
 .plugin-icon
@@ -294,7 +382,7 @@ table
 
 .webgl-canvas-normal
 {
-	background-color: #000; 
+	background-color: #000;
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -304,9 +392,9 @@ table
 
 .webgl-canvas-fs
 {
-	background-color: #000; 
-	position: absolute; 
-	left: 0px; 
+	background-color: #000;
+	position: absolute;
+	left: 0px;
 	top: 0px;
 	width: 100%;
 	height: 100%;
@@ -377,4 +465,11 @@ table
 	outline: none !important;
 	border-left: 1px solid @gray-base;
 	line-height: @line-height-small;
+}
+
+.node-title-input {
+	position: absolute;
+	top: 0px;
+	width: 100%;
+	border: 1px solid #222;
 }
